# open_ai_agent_sdk

./: .gitignore  error.ipynb
Day_1/: dataclass.ipynb  dynamic_instruction.ipynb  index.ipynb
MARKDOWN/: README.md  image.ipynb  index.ipynb  link.ipynb
agent_class/: agent_instructions.ipynb  agent_name.ipynb  clone_agent.ipynb  handoff.ipynb  handoffs.ipynb  hook.ipynb  index.ipynb  input_guraidrails.ipynb  model_settings.ipynb  output_type.ipynb  session.ipynb  tools.ipynb
agent_crash_course/: agents.ipynb  clone_agent.ipynb  guardial.ipynb  handoff.ipynb  index.ipynb  index.py  quick_start.ipynb  repl_utility.ipynb  results.ipynb  running_agents.ipynb  session.ipynb  simple_agent.ipynb  streaming.ipynb  threading_concepts.py  tool_calling.py  tool_calling_in_streamin.ipynb  tools.ipynb
callable/: callable.ipynb  index.py
errors/: index.ipynb
generic/: index.ipynb
mcp_coding/hello_mcp/: pyproject.toml
mcp_coding/hello_mcp/src/: main.py
mcp_coding/hello_mcp/src/hello_mcp/: __init__.py
mcp_coding/mcp_prompt/: pyproject.toml
mcp_coding/mcp_prompt/src/: main.py  mcp_server.py  open_ai_client.py  requests_client.py
mcp_coding/mcp_prompt/src/mcp_prompt/: __init__.py
mcp_coding/mcp_tools/: pyproject.toml
mcp_coding/mcp_tools/src/: main.py  test.py
mcp_coding/mcp_tools/src/mcp_tools/: __init__.py
model_configurations/: model_config.ipynb
openai_agent_comp/: run.ipynb
pydantic/: pydantic.ipynb
simple_translator_agent/: index.ipynb
state_dynamic_sys_prompt/: index.ipynb
structured_output/: structured_output.ipynb
(+7 files in other folders)
