[project]
name = "hello-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "arman229", email = "armanashraf015@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
hello-mcp = "hello_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
