[project]
name = "mcp-prompt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "arman229", email = "armanashraf015@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "openai-agents>=0.2.9",
]

[project.scripts]
mcp-prompt = "mcp_prompt:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
