[project]
name = "mcp-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "arman229", email = "armanashraf015@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
mcp-tools = "mcp_tools:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
